syntax = "proto3";

package sync;

import "sync/syncable_db.proto";

option go_package = "github.com/ava-labs/avalanchego/proto/pb/sync";

// Request represents a request for information during syncing.
message SyncRequest {
  oneof message {
    GetRangeProofRequest range_proof_request = 1;
    GetChangeProofRequest change_proof_request = 2;
  }
}

// ChangeProofResponse is the response for a ChangeProofRequest.
message ChangeProofResponse {
  oneof response {
    ChangeProof change_proof = 1;
    RangeProof range_proof = 2;
  }
}
